--- a/php-fpm.docker/httpd-vhosts.conf
+++ b/php-fpm.docker/httpd-vhosts.conf
@@ -1,13 +1,12 @@
-ServerName localhost
+ServerName example.com
 
 LoadModule deflate_module /usr/local/apache2/modules/mod_deflate.so
 LoadModule proxy_module /usr/local/apache2/modules/mod_proxy.so
 LoadModule proxy_fcgi_module /usr/local/apache2/modules/mod_proxy_fcgi.so
 
 <VirtualHost *:80>
-    # Proxy .php requests to port 9000 of the php-fpm container
-    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php-fpm:9000/usr/local/apache2/htdocs/$1
     DocumentRoot /usr/local/apache2/htdocs
+    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php-fpm:9000/srv/webroot/$1
     <Directory /usr/local/apache2/htdocs>
         DirectoryIndex index.php
         Options Indexes FollowSymLinks
