--- a/traefik.docker/docker-compose.yml
+++ b/traefik.docker/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - "traefik.frontend.rule=Host:traefik.${DOMAIN}"
       - "traefik.frontend.auth.basic.usersFile=/etc/traefik/.htpasswd"
       - "traefik.frontend.auth.basic.removeHeader=true"
-      - "traefik.frontend.errors.network.status=400-499"
+      - "traefik.frontend.errors.network.status=404"
       - "traefik.frontend.errors.network.backend=traefik-pages"
       - "traefik.frontend.errors.network.query=404.html"
     healthcheck:
